--- a/style.css
+++ b/style.css
@@ -90,7 +90,12 @@ body {
   font-size: 32px;
   text-align: center;
   line-height: 105%;
-  margin: 0;
+  margin: 15px;
+}
+
+iframe {
+  width: 90vw;
+  height: 72.5vh;
 }
 
 
